--- a/Mackerel-Core/Mackerel-Core.vcxproj.filters
+++ b/Mackerel-Core/Mackerel-Core.vcxproj.filters
@@ -254,6 +254,9 @@
     <ClInclude Include="src\LoggingSystem.h">
       <Filter>External Files</Filter>
     </ClInclude>
+    <ClInclude Include="ext\easyloggingpp-9.97.0\easyloggingpp-9.97.0\src\easylogging++.h">
+      <Filter>External Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\MaterialDiagram.cd">
@@ -265,5 +268,8 @@
     <None Include="src\unlit.glsl">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="src\LoggingSystem.conf" />
   </ItemGroup>
 </Project>
