Worked on Rendering & Basics of Passing Data

--- a/Mackerel-Core/Mackerel-Core.vcxproj.filters
+++ b/Mackerel-Core/Mackerel-Core.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="src\UniformData.cpp">
       <Filter>Source Files\AssetTypes\Material</Filter>
     </ClCompile>
+    <ClCompile Include="src\Framebuffer.cpp">
+      <Filter>Source Files\Systems\Rendering</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ext\Dear-ImGui 1.89.2\backends\imgui_impl_glfw.h">
@@ -295,6 +298,9 @@
     </ClInclude>
     <ClInclude Include="src\UniformBuffer.h">
       <Filter>Source Files\AssetTypes\Material</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FrameBuffer.h">
+      <Filter>Source Files\Systems\Rendering</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
