--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -106,9 +106,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="res\Shaders\fragmentHeader.glsl" />
+    <None Include="res\Shaders\frag\invert.glsl" />
     <None Include="res\Shaders\frag\monoColour.glsl" />
     <None Include="res\Shaders\lightsHeader.glsl" />
     <None Include="res\Shaders\light\unlit.glsl" />
+    <None Include="res\Shaders\static\FBDisplayer.glsl" />
+    <None Include="res\Shaders\static\vertPass.glsl" />
     <None Include="res\Shaders\vertexHeader.glsl" />
     <None Include="res\Shaders\vert\perspective.glsl" />
     <None Include="src\MaterialDiagram.cd" />
