--- a/Mackerel-Core/Mackerel-Core.vcxproj.filters
+++ b/Mackerel-Core/Mackerel-Core.vcxproj.filters
@@ -388,6 +388,15 @@
     <None Include="res\Shaders\light\unlit.glsl">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="res\Shaders\static\FBDisplayer.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="res\Shaders\static\vertPass.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="res\Shaders\frag\invert.glsl">
+      <Filter>Resource Files\Shaders\Shader Headers</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\LoggingSystem.conf">
