--- a/Mackerel-Core/Mackerel-Core.vcxproj.filters
+++ b/Mackerel-Core/Mackerel-Core.vcxproj.filters
@@ -94,6 +94,9 @@
     <Filter Include="Source Files\Systems\EntitySystem\Components">
       <UniqueIdentifier>{47ec9567-787d-4a02-b476-31a58bbab107}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Systems\Input System\Input Sets">
+      <UniqueIdentifier>{15b6880b-10ce-4635-91c6-75ea08d371fa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Window.cpp">
@@ -192,10 +195,10 @@
     <ClCompile Include="src\InputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\KeyEvents.h">
+    <ClCompile Include="src\ButtonEvents.h">
       <Filter>Source Files\Systems\Input System</Filter>
     </ClCompile>
-    <ClCompile Include="src\KeyHandler.cpp">
+    <ClCompile Include="src\ButtonHandler.cpp">
       <Filter>Source Files\Systems\Input System</Filter>
     </ClCompile>
     <ClCompile Include="src\Framebuffer.cpp">
@@ -356,10 +359,7 @@
     <ClInclude Include="src\InputManager.h">
       <Filter>Source Files\Systems\Input System</Filter>
     </ClInclude>
-    <ClInclude Include="src\Keys.h">
-      <Filter>Source Files\Systems\Input System</Filter>
-    </ClInclude>
-    <ClInclude Include="src\KeyHandler.h">
+    <ClInclude Include="src\ButtonHandler.h">
       <Filter>Source Files\Systems\Input System</Filter>
     </ClInclude>
     <ClInclude Include="src\Input.h">
@@ -379,6 +379,18 @@
     </ClInclude>
     <ClInclude Include="src\TransformComponent.h">
       <Filter>Source Files\Systems\EntitySystem\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Keys.h">
+      <Filter>Source Files\Systems\Input System\Input Sets</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GamepadButtons.h">
+      <Filter>Source Files\Systems\Input System\Input Sets</Filter>
+    </ClInclude>
+    <ClInclude Include="src\InputSetRanges.h">
+      <Filter>Source Files\Systems\Input System\Input Sets</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MouseButtons.h">
+      <Filter>Source Files\Systems\Input System\Input Sets</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
